IoT_Fermented_Food/manifests-k8s/config/angular-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: angular-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: angular-ms
            port:
              number: 80
        path: /
        pathType: Prefix
